examples/test/testpolicy3551.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3551
  namespace: namespace491
spec:
  podSelector:
    matchLabels:
      key23: value25
      key30: value41
      key19: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value7
      podSelector:
        matchLabels:
          key48: value5
          key16: value36
